feat: add winning problem
