# app/composeApp/src/commonMain/kotlin/io/github/samolego/ascendo_trainboard/api/generated/models/Problem.kt
@@ -33,6 +33,7 @@ import kotlinx.serialization.encoding.*
  * @param grades Array of user-submitted grades and ratings for this problem
  * @param description 
  * @param isCompetition 
+ * @param winner Whether this boulder was a winning one
  * @param averageGrade Average of all user-submitted grades (null if no grades)
  * @param averageStars Average of all user ratings (null if no grades)
  * @param updatedAt 
@@ -63,6 +64,9 @@ data class Problem (
     @SerialName(value = "description") val description: kotlin.String? = null,
 
     @SerialName(value = "is_competition") val isCompetition: kotlin.Boolean? = null,
+
+    /* Whether this boulder was a winning one */
+    @SerialName(value = "winner") val winner: kotlin.Boolean? = null,
 
     /* Average of all user-submitted grades (null if no grades) */
     @SerialName(value = "average_grade") val averageGrade: kotlin.Float? = null,
