# app/composeApp/src/commonMain/kotlin/io/github/samolego/ascendo_trainboard/api/generated/models/UpdateProblemRequest.kt
@@ -27,6 +27,7 @@ import kotlinx.serialization.encoding.*
  * @param description 
  * @param grade 
  * @param isCompetition 
+ * @param winner 
  * @param holdSequence Array of [index, type] where index is the hold index of the sector's holds array (0-indexed) and type is hold type (0=Start, 1=Foot, 2=Normal, 3=End)
  */
 @Serializable
@@ -40,6 +41,8 @@ data class UpdateProblemRequest (
     @SerialName(value = "grade") val grade: kotlin.Int? = null,
 
     @SerialName(value = "is_competition") val isCompetition: kotlin.Boolean? = null,
+
+    @SerialName(value = "winner") val winner: kotlin.Boolean? = null,
 
     /* Array of [index, type] where index is the hold index of the sector's holds array (0-indexed) and type is hold type (0=Start, 1=Foot, 2=Normal, 3=End) */
     @SerialName(value = "hold_sequence") val holdSequence: kotlin.collections.List<kotlin.collections.List<kotlin.Int>>? = null
